@@ -9,7 +9,7 @@
  * This file was originally derived from the Polyglot extensible compiler framework.
  *
  *  (C) Copyright 2000-2007 Polyglot project group, Cornell University
- *  (C) Copyright IBM Corporation 2007-2012.
+ *  (C) Copyright IBM Corporation 2007-2014.
  */
 
 package polyglot.lex;
@@ -23,7 +23,7 @@ public class CharacterLiteral extends Literal {
   public CharacterLiteral(Position position, char c, int sym)
   {
     super(position, sym); 
-    this.val = new Character(c); 
+    this.val = Character.valueOf(c); 
   }
   
   public Character getValue() 
